--- a/package.json
+++ b/package.json
@@ -32,13 +32,22 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^1.9.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "html-webpack-plugin": "^2.30.1",
+    "url-loader": "^0.5.9",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^7.2.6",
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -46,21 +55,15 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.1.18",
     "bootstrap": "^4.0.0-alpha.5",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
-    "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.5.3",
+    "postcss-cli": "^6.0.0",
     "postcss-loader": "^2.0.6",
     "react": "^16.2.0",
-    "react-animate-height": "^2.0.1",
+    "react-animate-height": "^2.0.3",
     "react-dom": "^16.0.0",
     "react-redux": "5.0.6",
     "react-router-dom": "^4.2.2",
@@ -70,7 +73,6 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
     "webpack-merge": "^4.1.0"
   }
